amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 5

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-directive-application
  Message: Directive MyDirective cannot be applied here
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.graphql#/web-api/customDomainProperties/MyDirective
  Property: 
  Range: [(1,7)-(1,8)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-directive-application
  Message: Directive MyDirective cannot be applied here
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.graphql#/web-api/endpoint/%2Fquery%2Fname/customDomainProperties/MyDirective
  Property: 
  Range: [(6,17)-(6,18)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-directive-application
  Message: Directive MyDirective cannot be applied here
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.graphql#/declares/shape/MyObject/customDomainProperties/MyDirective
  Property: 
  Range: [(11,14)-(11,15)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-directive-application
  Message: Directive MyDirective cannot be applied here
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.graphql#/declares/shape/MyObject/supportedOperation/myField/expects/request/parameter/parameter/myArgument/customDomainProperties/MyDirective
  Property: 
  Range: [(12,31)-(12,32)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-directive-application
  Message: Directive MyDirective cannot be applied here
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/wrong-directive-location.api.graphql#/declares/shape/MyObject/supportedOperation/myField/customDomainProperties/MyDirective
  Property: 
  Range: [(12,54)-(12,55)]
  Location: 

